gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/testscopestatic.d
version https://git-lfs.github.com/spec/v1
oid sha256:05ee7b01183a4f5a739625de04a90c7793a4d00d2c091331447b1aa4af9ec9c8
size 596
